<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/spring"
        android:layout_width="190dp"
        android:layout_height="125dp"
        android:contentDescription="@string/springImage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:srcCompat="@drawable/spring" />

    <ImageView
        android:id="@+id/autumn"
        android:layout_width="190dp"
        android:layout_height="125dp"
        android:contentDescription="@string/autumnImage"
        app:layout_constraintStart_toEndOf="@+id/winter"
        app:layout_constraintTop_toBottomOf="@+id/summer"
        app:srcCompat="@drawable/autumn" />

    <ImageView
        android:id="@+id/winter"
        android:layout_width="190dp"
        android:layout_height="125dp"
        android:contentDescription="@string/winterImage"
        app:layout_constraintStart_toStartOf="@+id/spring"
        app:layout_constraintTop_toBottomOf="@+id/spring"
        app:srcCompat="@drawable/winter" />

    <ImageView
        android:id="@+id/summer"
        android:layout_width="190dp"
        android:layout_height="125dp"
        android:contentDescription="@string/summerImage"
        app:layout_constraintStart_toEndOf="@+id/spring"
        app:layout_constraintTop_toTopOf="@+id/spring"
        app:srcCompat="@drawable/summer" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="#000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095" />

    <TextView
        android:id="@+id/mainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spring"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.255" />

    <Button
        android:id="@+id/previousButton"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/previous"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/winter"
        app:layout_constraintTop_toBottomOf="@+id/winter"
        app:layout_constraintVertical_bias="0.067" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/next"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/autumn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/previousButton" />

</androidx.constraintlayout.widget.ConstraintLayout>